...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

    <FrameLayout
        android:id="@+id/backgroundDim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

    <FrameLayout
        android:id="@+id/portraitPoemContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

        <EditText
            android:id="@+id/portraitTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/textOptionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/leftAlign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/centreAlign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/rightAlign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/centerVerticalAlign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/centerVerticalLeftAlign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/centerVerticalRightAlign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

            <com.google.android.material.slider.Slider
                android:id="@+id/textSizeSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/saveOptionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomDrawer"
        android:layout_width="match_parent"
        android:layout_height="53dp"
...

        <ImageButton
            android:id="@+id/textOptions"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
...
            android:elevation="5dp"
            android:src="@drawable/text_options_states"
            app:layout_constraintEnd_toStartOf="@+id/textColor"
            app:layout_constraintStart_toStartOf="parent" />

...
            android:elevation="5dp"
            android:src="@drawable/text_color_states"
            app:layout_constraintEnd_toStartOf="@+id/textSize"
            app:layout_constraintStart_toEndOf="@+id/textOptions" />

...
            android:elevation="5dp"
            android:src="@drawable/text_size_states"
            app:layout_constraintEnd_toStartOf="@+id/pagesOptions"
            app:layout_constraintStart_toEndOf="@+id/textColor" />

...
            android:elevation="5dp"
            android:src="@drawable/pages_button_states"
            app:layout_constraintEnd_toStartOf="@+id/saveOptions"
            app:layout_constraintStart_toEndOf="@+id/textSize" />

...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPagesContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
