...
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_personalisation">PersonalisationActivity</string>
    <string name="saved_images_folder_name" translatable="false">savedImages</string>
    <string name="poems_folder_name" translatable="false">poems</string>
    <string name="poem_themes_folder_name" translatable="false">poemThemes</string>
    <string name="thumbnails_folder_name" translatable="false">thumbnails</string>
    <string name="background_image_drawable_folder" translatable="false">background</string>
    <string name="my_images_folder_name" translatable="false">myImages</string>

    <!-- Preference Titles -->
    <string name="poem_preferences">Poem Preferences</string>

...
    <string name="orientation_pref" translatable="false">orientation</string>
    <string name="cover_page_pref" translatable="false">coverPage</string>
    <string name="author_pref" translatable="false">author</string>
    <string name="resolution_pref" translatable="false">resolution</string>
    <string name="app_nickname_pref" translatable="false">appNickname</string>

    <string name="create_poem">Create Poem</string>
    <string name="my_poem">My Poems</string>
    <string name="personalisation">Personalisation</string>
    <string name="poem_title">Title</string>
    <string name="poem_author">Author</string>
    <string name="start_writing">Start Writing Here</string>
    <string name="outline">Outline</string>
...
    <string name="ariana_violeta_font" translatable="false">Ariana Violeta</string>
    <string name="cabal_font" translatable="false">Cabal</string>
    <string name="cabal_bold_font" translatable="false">Cabal Bold</string>
    <string name="lobster_regular_font" translatable="false">Lobster Regular</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_new_image">Add New Image</string>
    <string name="color_picker_title">Select Color</string>
    <string name="remove_background_color_outline_popup">Would you like to remove the outline or the background color</string>
    <string name="remove_background_image_outline_popup">Would you like to remove the outline or the image</string>
    <string name="remove_background_title">Remove Background Element</string>
    <string name="positive_background_color_outline_button">Outline</string>
    <string name="negative_background_color_outline_button">Color</string>
    <string name="negative_background_image_outline_button">Image</string>
    <string name="create_poem_title">Give Your Poem A Title :)</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="invalid_input">Invalid input</string>
    <string name="invalid_input_message">You have entered a name which does not contain letters
    and or numbers. Please enter a valid name.</string>
    <string name="invalid_input_message_extended">Failed to created a new Album. Check that your input is valid
    and is not the same as an already saved album.</string>
...
    <string name="switch_on_positive_button">Previous Theme</string>
    <string name="switch_on_negative_button">New Theme</string>
    <string name="failed_poem_load_title">Failed To Load Poem</string>
    <string name="failed_poem_load_message">An error occurred whilst loading your poem theme please
        try again. If the problem persists file a bug report</string>
    <string name="personalisation_sharedpreferences_key">personalisation_settings</string>
    <string name="create_poem_text_view_hint">Start Writing here</string>
    <string name="pages">Pages</string>
    <string name="edit_theme">Edit</string>
    <string name="file_already_exists">File already exists</string>
    <string name="text_options_button">Text Options</string>
    <string name="text_size_button">Text Size</string>
    <string name="text_color_button">Text Color</string>
...
        is clickable to go to the previous image. Subsequently the last 20% of your screen takes you
        to the next image.</string>

    <string name="edit_poem_theme">Edit Poem Theme</string>
    <string name="edit_button_theme">Edit Theme</string>
    <string name="center_horizontal_text">Center Verical Text</string>
    <string name="title_change">Change Title</string>
    <string name="title_change_confirm">Confirm change</string>
    <string name="title_change_cancel">Cancel</string>
    <string name="search_exact_phrase">Search exact phrase</string>
    <string name="simple_file_name_search">Simple File Name Search</string>
    <string name="exact_phrase_search">Exact Search</string>
    <string name="approximate_phrase_search">Approximate Search</string>
    <string name="contains_phrase_search">Contains Search</string>
    <string name="search_here">Search Here</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_all_searches">Clear All Searches</string>
    <string name="no_results">No Results</string>
    <string name="no_input_entered">No Input Entered</string>
    <string name="search_stanza_text">Stanzas : %1$s</string>
    <string name="create_poem_edit_text_hint">Enter Poem Name Here</string>
    <string name="create_album_hint">Enter Album Name Here</string>
    <string name="load_poem_argument_name">loadPoem</string>
    <string name="poem_title_argument_name">poemTitle</string>
    <string name="album_argument_name">albumTitle</string>
    <string name="change_title_hint">Enter New Title</string>
    <string name="error_type_file">file</string>
    <string name="error_type_image">image</string>
    <string name="error_type_thumbnail">thumbnail</string>
    <string name="error_type_poem_theme">poem theme</string>
    <string name="app_logo">App logo</string>
    <string name="check">check</string>
...
